--- a/public/bankaccount.html
+++ b/public/bankaccount.html
@@ -27,8 +27,11 @@
             
             <div class="group">
                 <label class="label">Balance</label>
-                <span id="total-balance">0.00</span>
+                <div id="balance-container">
+                    <span id="total-balance">0.00</span>
+                </div>
             </div>
+            
             <div class="group">
                 <label class="label">Deposit</label>
                 <input type="text" id="deposit" class="input">
