--- a/public/linkedin.html
+++ b/public/linkedin.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <a href="https://www.linkedin.com/in/ikechi-akwara-899517227/">Ikechi's Linked</a>
-  <a href="https://www.linkedin.com/in/dejai-brown-947405251/">Dejai's Linked</a>
+  <a href="https://www.linkedin.com/in/ikechi-akwara-899517227/">Ikechi's Linked In</a>
+ 
 
 
 </body>
