--- a/public/homepage.html
+++ b/public/homepage.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bowie Students</title>
   <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
 </head>
 <body>
   <div class="background-wrap">
@@ -17,7 +18,7 @@
     <nav>
       <ul>
         <li><a href="reusme.html">About Ikechi</a></li>
-        <li><a href="dejairesume.html">About Dejai</a></li>
+        
         <li><a href="index.html">Bank Web</a></li>
         <li><a href="linkedin.html">Linked In</a></li>
         <li><a href="https://github.com/Youngshot1359/Senior-Capstone-Bowie-Bank-">Git Hub</a></li>
